--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": "~5.1",
-        "laravel/framework": ">=6.*"
+        "laravel/framework": "^6.*"
     },
     "autoload": {
         "psr-4": {
