--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "~5.1",
-        "laravel/framework": "^6.*"
+        "illuminate/support": "~5.1"
     },
     "autoload": {
         "psr-4": {
