--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.4.0",
-        "illuminate/support": "~5.1"
+        "php": ">=5.4.0"
     },
     "autoload": {
         "psr-4": {
